force-app/main/default/objects/Benefit__c/Benefit__c.object-meta.xml
<CustomObject>
    <description>The purpose of this object is to associated tangible and intangible business benefits to work requests and/or projects so that cost/benefit evaluations can be made by the IT project management approval committee.</description>
    <label>Benefit</label>
    <nameField>
        <label>Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>