force-app/main/default/objects/Benefit__c/fields/Actual_Benefit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Benefit_Amount__c</fullName>
    <label>Actual Benefit Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>