force-app/main/default/objects/Benefit__c/fields/Actual_Benefit_Realized__c.field-meta.xml
<CustomField>
    <fullName>Actual_Benefit_Realized__c</fullName>
    <label>Actual Benefit Realized</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>