force-app/main/default/objects/Benefit__c/fields/Benefit_Classification__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Classification__c</fullName>
    <label>Benefit Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increased Revenue</fullName>
            </value>
            <value>
                <fullName>Operational Efficiency</fullName>
            </value>
            <value>
                <fullName>Reduced Costs</fullName>
            </value>
            <value>
                <fullName>Regulatory / Mandate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>