force-app/main/default/objects/Benefit__c/fields/Benefit_Description__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Description__c</fullName>
    <label>Benefit Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>