force-app/main/default/objects/Benefit__c/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <inlineHelpText>Tangible benefits can be tied directly to a number.</inlineHelpText>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tangible</fullName>
            </value>
            <value>
                <fullName>Intangible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>