force-app/main/default/objects/Benefit__c/fields/Work_Request__c.field-meta.xml
<CustomField>
    <fullName>Work_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please associate to the proper business unit work request.</inlineHelpText>
    <label>Work Request</label>
    <referenceTo>Work_Request__c</referenceTo>
    <relationshipLabel>Benefits</relationshipLabel>
    <relationshipName>Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>